--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ h2 {
 .navbar-custom { 
   color: rgb(116, 186, 162);
   font-weight: bold;
-  background: #a6e3e9;
+  background: #3a32a8;
 }
 
 .navbar-custom-table { 
